# cpp-canonical-wav-decoder

./: .gitignore  CMakeLists.txt  README.md  test_leaks.sh
include/: chunk.hpp  generic.hpp  static_wav_decoder.hpp  wav_decoder.hpp  wav_file.hpp
src/: chunk.cpp  generic.cpp  static_wav_decoder.cpp  wav_decoder.cpp  wav_file.cpp
